Raw Starting Kit with ingestion and scoring working and html files updated

--- a/starting_kit/html_pages/data.html
+++ b/starting_kit/html_pages/data.html
@@ -21,7 +21,7 @@ The data is provided by <b>MUSÉUM NATIONAL D’HISTOIRE NATURELLE</b>. The data
 
 <p>
 <h3>Preprocessing</h3>
-All images in dataset are preprocessed and are cropped into 128x128 images. These squared images are then used to extract features using OpenCV KAZE descroptor. The number of features extracted are 100 which are provided for this competition.
+All images in dataset are preprocessed and are cropped into squared images which are then resized into 128x128 images.
 	
 </p>
 
