--- a/starting_kit/html_pages/evaluation.html
+++ b/starting_kit/html_pages/evaluation.html
@@ -2,7 +2,7 @@
 <h1>Evaluation</h1>
 
 <p>
-The problem is a multiclass classification problem. Each sample (an Image) is characterized by its feature extracted from opencv KAZE description (100 features). You must predict the Insect categories: bee, wasp, butterfly, other insect or other non-insect.
+The problem is a multiclass classification problem. Each sample (an Image) is composed of 128*128 pixels. You must predict the Insect categories: bee, wasp, butterfly, other insect or other non-insect.
 </p>
 
 
@@ -16,7 +16,7 @@ which predicts the labels for two test matrices X_valid and X_test.
 
 <p>
 <h3>Note:</h3>
-You are allowed to use features extracted from other images from other sources or use pre-trained neural networks.
+You are allowed to use pre-trained neural networks or use any other datasets for training.
 </p>
 
 
