--- a/starting_kit/scoring_output/scores.html
+++ b/starting_kit/scoring_output/scores.html
@@ -1,3 +1,3 @@
-<pre>======= Set 1 (Deep_pollination_train): accuracy(set1_score)=0.666666666667 =======
-<pre>======= Set 2 (Deep_pollination_valid): accuracy(set2_score)=0.200000000000 =======
-<pre>======= Set 3 (Deep_pollination_test): accuracy(set3_score)=0.200000000000 =======
+======= Set 1 (Deep_pollination_train): accuracy(set1_score)=ERROR =======
+======= Set 2 (Deep_pollination_valid): accuracy(set2_score)=ERROR =======
+<pre>======= Set 3 (Deep_pollination_test): accuracy(set3_score)=0.450880000000 =======
